--- a/index.html
+++ b/index.html
@@ -35,18 +35,11 @@
 		<li><a href="#footer">하단 바로가기</a></li>
 	</ul>
     <header id="header">
-        <div class="gnb-top">
-            <ul>
-                <li><a href="./sub/login.html">로그인</a></li>
-                <li><a href="#">회원가입</a></li>
-                <li><a href="#">고객센터</a></li>
-            </ul>
-        </div>
         <div class="gnb-wrap">
             <div class="left-box">
                 <h1><a href="index1.html"><img src="./images/logo.jpg" alt=""></a></h1>
                 <nav class="nav">
-                    <div class="bg"></div>
+                    <div class="bg"><span></span></div>
                     <ul class="depth1">
                         <li><a href="#">브랜드</a>
                             <ul class="depth2">
@@ -86,8 +79,8 @@
             </div>
             <div class="right-box">
                 <ul>
-                    <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                    <li><a href="./sub/login.html">로그인</a></li>
+                    <li><a href="#">회원가입</a></li>
                 </ul>
             </div>
             <div class="mob-gnb">
@@ -227,12 +220,24 @@
                 <div class="event_wrap">
                     <h3>EVENT</h3>
                     <a href="#"><img src="./images/event.jpg" alt="행사 이미지"></a>
-                </div>
                 <div class="news_wrap">
                     <h3>NEWS & NOTICE</h3>
                     <ul>
-                        <li><a href="#"><img src="./images/news.jpg" alt="뉴스 이미지"></a></li>
-                        <li><a href="#"><img src="./images/ntioce.png" alt="공지 이미지"></a></li>
+                        <li>
+                            <a href="#"><img src="./images/news.jpg" alt="뉴스 이미지"></a>
+                            <strong>
+                                <i>Notice</i>
+                                <span>로아커더블초코설빙 X 제주항공 EVENT 당첨자 발표</span>
+                                <em>2023-04-12</em>
+                            </strong>
+                        </li>
+                        <li><a href="#"><img src="./images/ntioce.png" alt="공지 이미지">
+                            <strong>
+                                <i>Notice</i>
+                                <span>★생딸기설빙먹고 스크래치쿠폰 받자! 당첨자 발표★</span>
+                                <em>2023-03-28</em>
+                            </strong>
+                        </a></li>
                     </ul>
                 </div>
             </div>
