--- a/index222.html
+++ b/index222.html
@@ -24,7 +24,7 @@
 <!-- 스와이퍼 --><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
 <!-- owl --><link rel="stylesheet" href="./css/owl.carousel.css">
 
-<link rel='https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css'>
+<link rel='stylesheet' href='./css/reset.css'/>
 <link rel='stylesheet' href='./css/style222.css'/>
 
 <!-- 제이쿼리 3.7 CDN --><script src='https://code.jquery.com/jquery-3.7.0.min.js' crossorigin='anonymous'></script>
@@ -35,15 +35,101 @@
 
 </head>
 <body>
-<!-- 시각장애인 웹 접근성을 위한 skip _ 지우지않아도 됩니다. -->
+    <ul id='skip'>
+        <li><a href='#header'>헤더 바로가기</a></li>
+        <li><a href='#nav'>메뉴 바로가기</a></li>
+        <li><a href='#content'>내용 바로가기</a></li>
+    </ul>
+    <header id="header">
+        <div class="inner">
+            <div class="header-mob-menu">
+                <h1 class="header-logo">
+                    <a href="./index222.html" class="logoBt" title="logo"><img src="./images/logo.jpg" alt="logo"></a>
+                </h1>
+                <span class="header-appBar">
+                    <a href="javascript:" class="appbarBt">
+                        <i class="appbar-line appbar-line1"></i>
+                        <i class="appbar-line appbar-line2"></i>
+                        <i class="appbar-line appbar-line3"></i>
+                    </a>
+                </span>
+                <span class="header-shop-btn">
+                    <a href="javascript:" class="appbarBt"></a>
+                </span>
+            </div>
+            <aside>
+                <span><a href="#" class="joinBt" title="joinBt">로그인</a></span>
+                <span><a href="#" class="joinBt" title="joinBt">회원가입</a></span>
+                <span><a href="#" class="joinBt" title="joinBt">고객센터</a></span>
+            </aside>
+            <div class="header-logoNav">
+                <h1><a href="index222.html">
+                    <img src="./images/logo.jpg" alt="logo" class="logo">
+                </a></h1>
+                <nav id="nav">
+                    <div class="bg"></div>
+                    <ul class="depth1">
+                        <li><a href="#">브랜드</a>
+                            <ul class="depth2">
+                                <li><a href="#" title="">브랜드</a></li>
+                                <li><a href="#" title="">설빙 광고영상</a></li>
+                                <li><a href="#" title="">뉴스&공지사항</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">메뉴</a>
+                            <ul class="depth2">
+                                <li><a href="#" title="">신제품</a></li>
+                                <li><a href="#" title="">설빙</a></li>
+                                <li><a href="#" title="">디저트</a></li>
+                                <li><a href="#" title="">음료</a></li>
+                                <li><a href="#" title="">MD</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">이벤트</a>
+                            <ul class="depth2">
+                                <li><a href="#" title="">이벤트</a></li>
+                                <li><a href="#" title="">e 쿠폰</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">매장 찾기</a>
+                            <ul class="depth2">
+                                <li><a href="#" title="">매장찾기</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">프랜차이즈</a>
+                            <ul class="depth2">
+                                <li><a href="#" title="">국내 가맹점 개설 안내</a></li>
+                                <li><a href="#" title="">해외 가맹점 개설 안내</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
+    <main id="main">
+        <section id="section1">
+            <div class="inner">
+                <div class="main_banner">
+                    <div class="swiper mySwiper">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide"><img src="./images/main_slide00.jpg" alt=""></div>
+                            <div class="swiper-slide"><img src="./images/main_slide01.jpg" alt=""></div>
+                            <div class="swiper-slide"><img src="./images/main_slide02.jpg" alt=""></div>
+                            <div class="swiper-slide"><img src="./images/main_slide03.jpg" alt=""></div>
+                            <div class="swiper-slide"><img src="./images/main_slide04.jpg" alt=""></div>
+                            <div class="swiper-slide"><img src="./images/main_slide05.jpg" alt=""></div>
+                        </div>
+                        <div class="swiper-button-next"></div>
+                        <div class="swiper-button-prev"></div>
+                        <div class="swiper-pagination"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 
-<ul id='skip'>
-    <li><a href='#header'>헤더 바로가기</a></li>
-    <li><a href='#nav'>메뉴 바로가기</a></li>
-    <li><a href='#content'>내용 바로가기</a></li>
-</ul>
 
-<!-- 공백을 위한 공간입니다. -->
 
 
 </body>
