--- a/index222.html
+++ b/index222.html
@@ -54,7 +54,7 @@
                     </a>
                 </div>
                 <div class="header-shop-btn">
-                    <a href="javascript:" class="appbarBt"></a>
+                    <a href="javascript:" class="appshopBt"></a>
                 </div>
             </div>
             <aside>
@@ -127,7 +127,6 @@
                             </ul>
                         </div>
                     </nav>
-                    </div>
                 </div>
             </div>
         </div>
@@ -252,22 +251,25 @@
                         <img src="" alt="">
                         <ul>
                             <li>
-                                <a href="#"><img src="./images/news.jpg" alt="뉴스 이미지"></a>
-                                <!-- <strong>
-                                    <i>Notice</i>
-                                    <span>로아커더블초코설빙 X 제주항공 EVENT 당첨자 발표</span>
-                                    <em>2023-04-12</em>
-                                </strong> -->
+                                <a href="#">
+                                    <img src="./images/news.jpg" alt="뉴스 이미지">
+                                    <strong>
+                                        <i>Notice</i>
+                                        <span>로아커더블초코설빙 X 제주항공 EVENT 당첨자 발표</span>
+                                        <em>2023-04-12</em>
+                                    </strong>
+                                </a>
                             </li>
                             <li>
-                                <a href="#"><img src="./images/ntioce.png" alt="공지 이미지">
-                                <!-- <strong>
-                                    <i>Notice</i>
-                                    <span>★생딸기설빙먹고 스크래치쿠폰 받자! 당첨자 발표★</span>
-                                    <em>2023-03-28</em>
-                                </strong> -->
-                            </a>
-                        </li>
+                                <a href="#">
+                                    <img src="./images/ntioce.png" alt="공지 이미지">
+                                    <strong>
+                                        <i>Notice</i>
+                                        <span>★생딸기설빙먹고 스크래치쿠폰 받자! 당첨자 발표★</span>
+                                        <em>2023-03-28</em>
+                                    </strong>
+                                </a>
+                            </li>
                         </ul>
                     </div>
                 </div>
