--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-<title>설빙2222</title>
+<title>설빙</title>
 <meta charset='utf-8'>
 <meta name='viewport' content='width=device-width, initial-scale=1.0'>
 <meta name='Title' content=''>
@@ -243,11 +243,11 @@
             <div class="inner">
                 <div class="main_notice">
                     <div class="event_wrap">
-                        <h2>EVENT</h2>
+                        <h3>EVENT</h3>
                         <a href="#"><img src="./images/event.jpg" alt="행사 이미지"></a>
                     </div>    
                     <div class="news_wrap">
-                        <h2>NEWS & NOTICE</h2>
+                        <h3>NEWS & NOTICE</h3>
                         <ul>
                             <li>
                                 <a href="#">
@@ -277,7 +277,7 @@
         <section id="section4">
             <div class="inner">
                 <div class="main_sns">
-                    <h2>SNS</h2>
+                    <h3>SNS</h3>
                     <ul>
                         <li><a href="#"><img src="./images/sns_img1.jpg" alt=""></a></li>
                         <li><a href="#"><img src="./images/sns_img2.jpg" alt=""></a></li>
@@ -289,13 +289,28 @@
                 </div>
             </div>
         </section>
-        <footer id="footer">
-
-        </footer>
     </main>
-
-
-
-
+    <footer id="footer">
+        <div class="inner">
+            <ul class="footer-link">
+                <li><a href="#">고객센터</a></li>
+                <li><a href="#">경영주 전용 페이지</a></li>
+                <li><a href="#">서비스 이용약관</a></li>
+                <li><a href="#">개인정보처리방침</a></li>
+                <li><a href="#">이메일무단수집거부</a></li>
+                <li><a href="#">법적고지</a></li>
+            </ul>
+            <ul class="footer-info">
+                <li>법인명: (주)설빙</li>
+                <li>사업자등록번호: 602-81-62460</li>
+                <li>사업자정보확인</a></li>
+                <li>본사주소: 서울 송파구 올림픽로 319 새마을 교통회관 8/11층</li>
+                <li>대표번호 : 02-3401-7900</li>
+                <li>팩스 : 02-447-8755</li>
+                <li>마케팅 제휴 이메일: marketing@sulbing.com</li>
+            </ul>
+            <p>COPYRIGHT SULBING 2013 ALL RIGHTS RESERVED.</p>
+        </div>
+    </footer>
 </body>
 </html>
