--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
         <li><a href='#nav'>메뉴 바로가기</a></li>
         <li><a href='#content'>내용 바로가기</a></li>
     </ul>
+    <div class="quick-menu">
+        <a href="#"><img src="./images/brandstory_ico_main_menu_list_character_new.png" alt="quick memu img">가맹문의</a>
+    </div>
     <header id="header">
         <div class="inner">
             <div class="header-mob-menu">
