--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
     <ul id='skip'>
         <li><a href='#header'>헤더 바로가기</a></li>
         <li><a href='#nav'>메뉴 바로가기</a></li>
-        <li><a href='#content'>내용 바로가기</a></li>
+        <li><a href='#main'>내용 바로가기</a></li>
+        <li><a href='#footer'>하단 바로가기</a></li>
     </ul>
     <div class="quick-menu">
         <a href="#"><img src="./images/brandstory_ico_main_menu_list_character_new.png" alt="quick memu img">가맹문의</a>
@@ -279,15 +280,43 @@
         </section>
         <section id="section4">
             <div class="inner">
+                <div class="main_store">
+                    <div class="main_store_search">
+                        <h3>매장찾기</h3>
+                        <p>가까운 설빙 매장을 확인해보세요.</p>
+                        <form>
+                            <label for="search_store"></label>
+                            <input type="text" id="search_store" placeholder="매장명 검색">
+                            <button type="button"><i class="fa fa-search"></i></button>
+                        </form>
+                    </div>
+                    <div class="main_franchise">
+                        <h3>창업안내</h3>
+                        <a href="#">
+                            <p>가맹점주와 본사가 상생할 수 있는 설빙에서 당신이 꿈꾸던 창업의 문을 힘차게 열어보세요.</p>
+                            <strong>자세히 알아보기 <i class="fa fa-arrow-right" ></i></strong>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="section5">
+            <div class="inner">
                 <div class="main_sns">
                     <h3>SNS</h3>
                     <ul>
-                        <li><a href="#"><img src="./images/sns_img1.jpg" alt=""></a></li>
-                        <li><a href="#"><img src="./images/sns_img2.jpg" alt=""></a></li>
-                        <li><a href="#"><img src="./images/sns_img3.jpg" alt=""></a></li>
-                        <li><a href="#"><img src="./images/sns_img4.jpg" alt=""></a></li>
-                        <li><a href="#"><img src="./images/sns_img5.jpg" alt=""></a></li>
-                        <li><a href="#"><img src="./images/sns_img6.jpg" alt=""></a></li>
+                        <li><a href="#">
+                            <div class="sns-img"><img src="./images/sns_img1.jpg" alt="sns-img"></div></a></li>
+                        <li><a href="#">
+                            <div class="sns-img"><img src="./images/sns_img2.jpg" alt="sns-img"></div></a></li>
+                        <li><a href="#">
+                            <div class="sns-img"><img src="./images/sns_img3.jpg" alt="sns-img"></div></a></li>
+                        <li><a href="#">
+                            <div class="sns-img"><img src="./images/sns_img4.jpg" alt="sns-img"></div></a></li>
+                        <li><a href="#">
+                            <div class="sns-img"><img src="./images/sns_img5.jpg" alt="sns-img"></div></a></li>
+                        <li><a href="#">
+                            <div class="sns-img"><img src="./images/sns_img6.jpg" alt="sns-img"></div></a></li>
                     </ul>
                 </div>
             </div>
