--- a/index.html
+++ b/index.html
@@ -41,9 +41,6 @@
         <li><a href='#main'>내용 바로가기</a></li>
         <li><a href='#footer'>하단 바로가기</a></li>
     </ul>
-    <div class="quick-menu">
-        <a href="#"><img src="./images/brandstory_ico_main_menu_list_character_new.png" alt="quick memu img">가맹문의</a>
-    </div>
     <header id="header">
         <div class="inner">
             <div class="header-mob-menu">
@@ -62,19 +59,19 @@
                 </div>
             </div>
             <aside>
-                <span><a href="#" class="joinBt" title="joinBt">로그인</a></span>
-                <span><a href="#" class="joinBt" title="joinBt">회원가입</a></span>
-                <span><a href="#" class="joinBt" title="joinBt">고객센터</a></span>
+                <span><a href="#" class="joinBt" title="로그인">로그인</a></span>
+                <span><a href="#" class="joinBt" title="회원가입">회원가입</a></span>
+                <span><a href="#" class="joinBt" title="고객센터">고객센터</a></span>
             </aside>
             <div class="header-nav">
                 <h1><a href="index222.html"><img src="./images/logo.jpg" alt="logo" class="logo"></a></h1>
                 <nav id="nav">
                     <ul>
-                        <li><a href="#">브랜드</a></li>
-                        <li><a href="#">메뉴</a></li>
-                        <li><a href="#">이벤트</a></li>
-                        <li><a href="#">매장 찾기</a></li>
-                        <li><a href="#">프랜차이즈</a></li>
+                        <li><a href="#" title="브랜드">브랜드</a></li>
+                        <li><a href="#" title="메뉴">메뉴</a></li>
+                        <li><a href="#" title="이벤트">이벤트</a></li>
+                        <li><a href="#" title="매장찾기">매장 찾기</a></li>
+                        <li><a href="#" title="프랜차이즈">프랜차이즈</a></li>
                     </ul>
                 </nav>
             </div>
@@ -83,56 +80,59 @@
                 <div class="mob-content">
                     <div class="mob-gnb-search">
                         <label for="search_text"></label>
-                        <input type="text" id="search_text" placeholder="검색어를 입력해주세요">
+                        <input type="text" id="search_text">
                         <button type="submit" value="검색"><i class="fa fa-search"></i></button>
                     </div>
                     <nav class="mob-nav">
                         <ul>
-                            <li><a href="#" class="mob-depth1">브랜드</a>
+                            <li class="mob-depth1"><a href="#" title="브랜드">브랜드</a>
                                 <ul class="mob-depth2">
-                                    <li><a href="#" title="">브랜드</a></li>
-                                    <li><a href="#" title="">설빙 광고영상</a></li>
-                                    <li><a href="#" title="">뉴스&공지사항</a></li>
+                                    <li><a href="#" title="브랜드">브랜드</a></li>
+                                    <li><a href="#" title="설빙 광고영상">설빙 광고영상</a></li>
+                                    <li><a href="#" title="뉴스&공지사항">뉴스&공지사항</a></li>
                                 </ul>
                             </li>
-                            <li><a href="#" class="mob-depth1">메뉴</a>
+                            <li class="mob-depth1"><a href="#" title="메뉴">메뉴</a>
                                 <ul class="mob-depth2">
-                                    <li><a href="#" title="">신제품</a></li>
-                                    <li><a href="#" title="">설빙</a></li>
-                                    <li><a href="#" title="">디저트</a></li>
-                                    <li><a href="#" title="">음료</a></li>
-                                    <li><a href="#" title="">MD</a></li>
+                                    <li><a href="#" title="신제품">신제품</a></li>
+                                    <li><a href="#" title="설빙">설빙</a></li>
+                                    <li><a href="#" title="디저트">디저트</a></li>
+                                    <li><a href="#" title="음료">음료</a></li>
+                                    <li><a href="#" title="MD">MD</a></li>
                                 </ul>
                             </li>
-                            <li><a href="#" class="mob-depth1">이벤트</a>
+                            <li class="mob-depth1"><a href="#" title="이벤트">이벤트</a>
                                 <ul class="mob-depth2">
-                                    <li><a href="#" title="">이벤트</a></li>
-                                    <li><a href="#" title="">e 쿠폰</a></li>
+                                    <li><a href="#" title="이벤트">이벤트</a></li>
+                                    <li><a href="#" title="e 쿠폰">e 쿠폰</a></li>
                                 </ul>
                             </li>
-                            <li><a href="#" class="mob-depth1">매장 찾기</a>
+                            <li class="mob-depth1"><a href="#" title="매장찾기">매장 찾기</a>
                                 <ul class="mob-depth2">
-                                    <li><a href="#" title="">매장찾기</a></li>
+                                    <li><a href="#" title="매장찾기">매장찾기</a></li>
                                 </ul>
                             </li>
-                            <li><a href="#" class="mob-depth1">프랜차이즈</a>
+                            <li class="mob-depth1"><a href="#" title="프랜차이즈">프랜차이즈</a>
                                 <ul class="mob-depth2">
-                                    <li><a href="#" title="">국내 가맹점 개설 안내</a></li>
-                                    <li><a href="#" title="">해외 가맹점 개설 안내</a></li>
+                                    <li><a href="#" title="국내 가맹점 개설 안내">국내 가맹점 개설 안내</a></li>
+                                    <li><a href="#" title="해외 가맹점 개설 안내">해외 가맹점 개설 안내</a></li>
                                 </ul>
                             </li>
                         </ul>
                         <div class="util">
                             <ul>
-                                <li><a href="./sub/login.html">로그인</a></li>
-                                <li><a href="#">회원가입</a></li>
-                                <li><a href="#">고객센터</a></li>
-                                <li><a href="#">경영주 전용 페이지</a></li>
+                                <li><a href="./sub/login.html" title="로그인">로그인</a></li>
+                                <li><a href="#" title="회원가입">회원가입</a></li>
+                                <li><a href="#" title="고객센터">고객센터</a></li>
+                                <li><a href="#" title="경영주 전용 페이지">경영주 전용 페이지</a></li>
                             </ul>
                         </div>
                     </nav>
                 </div>
             </div>
+        </div>
+        <div class="quick-menu">
+            <a href="#"><img src="./images/brandstory_ico_main_menu_list_character_new.png" alt="quick memu img">가맹문의</a>
         </div>
     </header>
     <main id="main">
@@ -143,38 +143,38 @@
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
                                 <a href="#">
-                                    <img src="./images/main_slide00.jpg" alt="" class="p_img">
-                                    <img src="./images/main_slide00m.jpg" alt="" class="m_img">
+                                    <img src="./images/main_slide00.jpg" alt="pc banner" class="p_img">
+                                    <img src="./images/main_slide00m.jpg" alt="mobile banner" class="m_img">
                                 </a>
                             </div>
                             <div class="swiper-slide">
                                 <a href="#">
-                                    <img src="./images/main_slide01.jpg" alt="" class="p_img">
-                                    <img src="./images/main_slide01m.jpg" alt="" class="m_img">
+                                    <img src="./images/main_slide01.jpg" alt="pc banner" class="p_img">
+                                    <img src="./images/main_slide01m.jpg" alt="mobile banne" class="m_img">
                                 </a>
                             </div>
                             <div class="swiper-slide">
                                 <a href="#">
-                                    <img src="./images/main_slide02.jpg" alt="" class="p_img">
-                                    <img src="./images/main_slide02m.jpg" alt="" class="m_img">
+                                    <img src="./images/main_slide02.jpg" alt="pc banner" class="p_img">
+                                    <img src="./images/main_slide02m.jpg" alt="mobile banne" class="m_img">
                                 </a>
                             </div>
                             <div class="swiper-slide">
                                 <a href="#">
-                                    <img src="./images/main_slide03.jpg" alt="" class="p_img">
-                                    <img src="./images/main_slide03m.jpg" alt="" class="m_img">
+                                    <img src="./images/main_slide03.jpg" alt="pc banner" class="p_img">
+                                    <img src="./images/main_slide03m.jpg" alt="mobile banne" class="m_img">
                                 </a>
                             </div>
                             <div class="swiper-slide">
                                 <a href="#">
-                                    <img src="./images/main_slide04.jpg" alt="" class="p_img">
-                                    <img src="./images/main_slide04m.jpg" alt="" class="m_img">
+                                    <img src="./images/main_slide04.jpg" alt="pc banner" class="p_img">
+                                    <img src="./images/main_slide04m.jpg" alt="mobile banne" class="m_img">
                                 </a>
                             </div>
                             <div class="swiper-slide">
                                 <a href="#">
-                                    <img src="./images/main_slide05.jpg" alt="" class="p_img">
-                                    <img src="./images/main_slide05m.jpg" alt="" class="m_img">
+                                    <img src="./images/main_slide05.jpg" alt="pc banner" class="p_img">
+                                    <img src="./images/main_slide05m.jpg" alt="mobile banne" class="m_img">
                                 </a>
                             </div>
                         </div>
@@ -200,7 +200,7 @@
                         <ul class="slide_memu owl-carousel">
                             <li>
                                 <div class="img_box">
-                                    <a href="#"><img src="./images/hot00.png" alt=""></a>
+                                    <a href="#"><img src="./images/hot00.png" alt="인절미 크룽지"></a>
                                 </div>
                                 <div class="text_box">
                                     <strong>인절미 크룽지</strong>
@@ -208,7 +208,7 @@
                             </li>
                             <li>
                                 <div class="img_box">
-                                    <a href="#"><img src="./images/hot01.png" alt=""></a>
+                                    <a href="#"><img src="./images/hot01.png" alt="플레인 크룽지"></a>
                                 </div>
                                 <div class="text_box">
                                     <strong>플레인 크룽지</strong>
@@ -216,7 +216,7 @@
                             </li>
                             <li>
                                 <div class="img_box">
-                                    <a href="#"><img src="./images/hot02.png" alt=""></a>
+                                    <a href="#"><img src="./images/hot02.png" alt="샤인머스캣 메론설빙"></a>
                                 </div>
                                 <div class="text_box">
                                     <strong>샤인머스캣 메론설빙</strong>
@@ -224,7 +224,7 @@
                             </li>
                             <li>
                                 <div class="img_box">
-                                    <a href="#"><img src="./images/hot03.png" alt=""></a>
+                                    <a href="#"><img src="./images/hot03.png" alt="딸기치즈 메론설빙"></a>
                                 </div>
                                 <div class="text_box">
                                     <strong>딸기치즈 메론설빙</strong>
@@ -232,7 +232,7 @@
                             </li>
                             <li>
                                 <div class="img_box">
-                                    <a href="#"><img src="./images/hot04.png" alt=""></a>
+                                    <a href="#"><img src="./images/hot04.png" alt="요거통통 메론설빙"></a>
                                 </div>
                                 <div class="text_box">
                                     <strong>요거통통 메론설빙</strong>
@@ -318,6 +318,11 @@
                         <li><a href="#">
                             <div class="sns-img"><img src="./images/sns_img6.jpg" alt="sns-img"></div></a></li>
                     </ul>
+                    <div class="sns-sort">
+                        <span><a href="#"><i class="fa fa-facebook-f"></i></a></span>
+                        <span><a href="#"><i class="fab fa-instagram"></i></a></span>
+                        <span><a href="#"><i class="fab fa-youtube"></i></a></span>
+                    </div>
                 </div>
             </div>
         </section>
