--- a/sub/login.html
+++ b/sub/login.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>회원가입</title>
+    <title>설빙 회원가입</title>
+    <meta charset='utf-8'>
+    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+    <meta name='Title' content=''>
+    <meta name='Subject' content=''>
+    <meta name='Keywords' content=''>
+    <meta name='Author' content=''>
+    <meta name='Publisher' content=''>
+    <meta name='Description' content=''>
+    <meta name='Author-Date' content=''>
+    <meta name='Copyright' content=''>
+
+    <!-- 마루부리 폰트 --><link href="https://hangeul.pstatic.net/hangeul_static/css/nanum-square-neo.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/login.css">
     <script src="../js/script_login.js" defer></script>
@@ -21,17 +30,17 @@
                         <li><a href="#">홈</a></li>
                         <li><a href="#"> 회원가입</a></li>
                     </ul>
-                    <ul class="register_step">
+                    <!-- <ul class="register_step">
                         <li><a href="#">약관동의</a></li>
                         <li><a href="#">인증</a></li>
                         <li class="step3">
                             <a href="#"><strong>정보입력</strong></a>
                         </li>
                         <li><a href="#">가입완료</a></li>
-                    </ul>
+                    </ul> -->
                 </div>
                 <fieldset>
-                    <form action="#" id="join" method="post" name="join">
+                    <form action="index.html" id="join" method="post" name="join">
                         <h3>가입자정보</h3>
                         <ul>
                             <li>
