--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
 <link rel='stylesheet' href='./css/reset.css'/>
 <link rel='stylesheet' href='./css/style.css'/>
 
+<!-- 파비콘 --><link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
 <!-- 제이쿼리 3.7 CDN --><script src='https://code.jquery.com/jquery-3.7.0.min.js' crossorigin='anonymous'></script>
 <!-- owl --><script src="./js/owl.carousel.js"></script>
 <!-- 스와이퍼 --><script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+<!-- 모더나이저 --><script src="./js/modernizr-custom.js"></script>
 
 <script src='./js/script.js' defer></script>
 
